@@ -14360,7 +14360,7 @@ LISPFUN(socket_status,seclass_default,1,2,norest,nokey,0,NIL) {
 local void sock_opt_bool (SOCKET handle, int option, object value)
 {
   var int val;
-  var SOCKLEN_T len = sizeof(val);
+  var CLISP_SOCKLEN_T len = sizeof(val);
   #ifdef HAVE_GETSOCKOPT
   if (-1 == getsockopt(handle,SOL_SOCKET,option,(char*)&val,&len))
     OS_error();
@@ -14379,7 +14379,7 @@ local void sock_opt_bool (SOCKET handle, int option, object value)
 local maygc void sock_opt_int (SOCKET handle, int option, object value)
 {
   var unsigned int val;
-  var SOCKLEN_T len = sizeof(val);
+  var CLISP_SOCKLEN_T len = sizeof(val);
   #ifdef HAVE_GETSOCKOPT
   if (-1 == getsockopt(handle,SOL_SOCKET,option,(char*)&val,&len))
     OS_error();
@@ -14398,7 +14398,7 @@ local maygc void sock_opt_int (SOCKET handle, int option, object value)
 local maygc void sock_opt_time (SOCKET handle, int option, object value)
 {
   var struct timeval val;
-  var SOCKLEN_T len = sizeof(val);
+  var CLISP_SOCKLEN_T len = sizeof(val);
   #ifdef HAVE_GETSOCKOPT
   if (-1 == getsockopt(handle,SOL_SOCKET,option,(char *)&val,&len)) OS_error();
   if (val.tv_usec) {
@@ -14474,7 +14474,7 @@ LISPFUN(socket_options,seclass_default,1,0,rest,nokey,0,NIL) {
    #ifdef SO_LINGER
     else if (eq(kwd,S(Kso_linger))) {
       struct linger val;
-      var SOCKLEN_T len = sizeof(val);
+      var CLISP_SOCKLEN_T len = sizeof(val);
       #ifdef HAVE_GETSOCKOPT
       if (-1 == getsockopt(handle,SOL_SOCKET,SO_LINGER,(char*)&val,&len))
         OS_error();
